[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/chat_gpt_armor_2_fixed_v2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://nodes/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://shaders/RedAndGreenGlowShader.tres" type="Material" id=4]
[ext_resource path="res://nodes/HitBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/states/EnemyDying.gd" type="Script" id=6]
[ext_resource path="res://scripts/states/EnemyIdle.gd" type="Script" id=7]
[ext_resource path="res://scripts/states/EnemyFollowing.gd" type="Script" id=8]
[ext_resource path="res://scripts/states/Enemy_state_machine.gd" type="Script" id=9]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;


void fragment() {
	COLOR.rgb = vec3(1.0);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 9 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 65.0
height = 22.0

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )

[sub_resource type="Animation" id=12]
resource_name = "Die"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.2, 57.4748, 90.5948, -0.9, 11.52, 0.6, 0.00573897, 79.0748, -0.025, 20, 0, -1.43999, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5, 1.501 )
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.1, 44.5, 54, -0.0251085, 2.16666, 0.112411, -9.70017, -2.16666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "Die"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.2, 57.4748, 90.5948, -0.9, 11.52, 0.6, 0.00573897, 79.0748, -0.025, 20, 0, -1.43999, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5, 1.501 )
}

[sub_resource type="Animation" id=17]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.1, 44.5, 54, -0.0251085, 2.16666, 0.112411, -9.70017, -2.16666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.188235, 0.372549, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.623529, 0.0666667, 0.0666667, 1 )

[sub_resource type="CircleShape2D" id=15]
radius = 725.069

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
MAX_DEFAULT_HEALTH = 10
speed = 175.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 11 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitoring = false
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 10 )
shape = SubResource( 8 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 10 )
shape = SubResource( 8 )

[node name="AnimationPlayerActionPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 12 )
anims/Hit = SubResource( 7 )
anims/RESET = SubResource( 3 )

[node name="AnimationPlayerActionEnemy" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 16 )
anims/Hit = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="LifeUIBar" type="ProgressBar" parent="."]
margin_left = -36.0
margin_top = -79.0
margin_right = 44.0
margin_bottom = -65.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
max_value = 5.0
step = 1.0
value = 4.0

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerGlow" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 15 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )
initial_state = "EnemyIdle"

[node name="EnemyIdle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="EnemyFollowing" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="EnemyDying" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
